--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
             <li>Professor and teaching assistants often walked up and down the aisles to answer individual student questions and clear up any confusion. </li>
             <li>Every twenty minutes or so, the Professor asked a question to the class. </li>
         </ul>
-        <img src="images/professorolin.jpg" alt="Professor in Olin" width="100%" height="100%"/>
+        <img src="images/professorolin.JPG" alt="Professor in Olin" width="100%" height="100%"/>
         <p style="font-weight:bold">What objects play a central role during teamwork? </p>
         <ul>
             <li>Good communication and focus is crucial for students to understand what the professor is doing on the screen and learn during the lecture. </li>
             <li>Professor needs to understand the class atmosphere, but has difficulty reading facial expressions especially in a large lecture hall. He can not hold students accountable for not paying attention if he can not see what’s on their computers. </li>
             <li>Often times, students felt distracted by their phones, computers, and friends. </li>
         </ul>
-        <img src="images/studentolin.jpg" alt="Professor in Olin" width="100%" height="100%"/>
+        <img src="images/studentolin.JPG" alt="Professor in Olin" width="100%" height="100%"/>
         </section>
 
         <!-- Five -->
