--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h2>Design Project II videos</h2>
             <!-- Alex -->
             <div class="row">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
             </div>
