--- a/index.html
+++ b/index.html
@@ -94,25 +94,25 @@
         <section id="Five">
             <h2>Design Project II videos</h2>
             <!-- Alex -->
-            <div class="row">
+            <div>
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
             </div>
             <!-- Lucy -->
-            <div class="row">
+            <div>
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
                     <h3>Lucy</h3>
                     <!-- <p>Your Spirit Robot.</p> -->
             </div>
             <!-- Yu Meng -->
-            <div class="row">
+            <div>
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
                     <h3>Yu Meng</h3>
                     <!-- <p>Tri-Arm Robot</p> -->
             </div>
             <!-- Janani -->
-            <div class="row">
+            <div>
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
                     <h3>Janani</h3>
                     <!-- <p>Kirby Robot</p> -->
