--- a/index.html
+++ b/index.html
@@ -94,34 +94,44 @@
         <section id="Five">
             <h2>Design Project II videos</h2>
             <!-- Alex -->
-            <div class="container-fluid">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
+            <div class="row">
+                <article class="6u 12u$(large) work-item">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
+                </article>
             </div>
             <!-- Lucy -->
-            <div class="container-fluid">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
+            <div class="row">
+                <article class="6u 12u$(large) work-item">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
                     <h3>Lucy</h3>
                     <!-- <p>Your Spirit Robot.</p> -->
+                </article>
             </div>
             <!-- Yu Meng -->
-            <div class="container-fluid">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
+            <div class="row">
+                <article class="6u 12u$(large) work-item">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
                     <h3>Yu Meng</h3>
                     <!-- <p>Tri-Arm Robot</p> -->
+                </article>
             </div>
             <!-- Janani -->
-            <div class="container-fluid">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
+            <div class="row">
+                <article class="6u 12u$(large) work-item">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
                     <h3>Janani</h3>
                     <!-- <p>Kirby Robot</p> -->
+                </article>
             </div>
             <!-- Pehuen -->
-            <div class="container-fluid">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/cQjUlOIpXek" frameborder="0" allowfullscreen></iframe>
+            <div class="row">
+                <article class="6u 12u$(xsmall) work-item">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/cQjUlOIpXek" frameborder="0" allowfullscreen></iframe>
                     <h3>Pehuen</h3>
                     <!-- <p>Wally Re-incarnated</p> -->
+                </article>
             </div>
         </section>
 
@@ -144,8 +154,8 @@
 
 <footer id="footer">
         <ul class="icons">
-            <li><a href="https://github.com/lucy-he/DesignProject4/" class="icon fa-github"><span class="label">Github</span></a></li>
-            <li><a href="lh486@cornell.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+            <li><a href="https://github.com/alexsinfarosa/autobot5" class="icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="as898@cornell.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
         </ul>
         <ul class="copyright">
             <li>Design: Alex and Lucy</li>
