--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <h2>Design Project II videos</h2>
             <!-- Alex -->
             <div class="row">
-                <article class="6u 12u$(large) work-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
+                <article class="12u 12u$(large) work-item">
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
                 </article>
@@ -104,7 +104,7 @@
             <!-- Lucy -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
                     <h3>Lucy</h3>
                     <!-- <p>Your Spirit Robot.</p> -->
                 </article>
@@ -112,7 +112,7 @@
             <!-- Yu Meng -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
                     <h3>Yu Meng</h3>
                     <!-- <p>Tri-Arm Robot</p> -->
                 </article>
@@ -120,7 +120,7 @@
             <!-- Janani -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
                     <h3>Janani</h3>
                     <!-- <p>Kirby Robot</p> -->
                 </article>
