--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <!-- Janani -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
                     <h3>Janani</h3>
                     <!-- <p>Kirby Robot</p> -->
                 </article>
