Fixed width and height for videos

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!-- Alex -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
                 </article>
@@ -104,7 +104,7 @@
             <!-- Lucy -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
                     <h3>Lucy</h3>
                     <!-- <p>Your Spirit Robot.</p> -->
                 </article>
@@ -112,7 +112,7 @@
             <!-- Yu Meng -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
                     <h3>Yu Meng</h3>
                     <!-- <p>Tri-Arm Robot</p> -->
                 </article>
@@ -120,7 +120,7 @@
             <!-- Janani -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
                     <h3>Janani</h3>
                     <!-- <p>Kirby Robot</p> -->
                 </article>
@@ -128,7 +128,7 @@
             <!-- Pehuen -->
             <div class="row">
                 <article class="12u 12u$(xsmall) work-item">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/cQjUlOIpXek" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/cQjUlOIpXek" frameborder="0" allowfullscreen></iframe>
                     <h3>Pehuen</h3>
                     <!-- <p>Wally Re-incarnated</p> -->
                 </article>
