Changed Yu's Name to Kate

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="row 50% uniform">
                     <div class="4u"><span class="image fit"><img src="images/janani.png" alt="janani" /></span>Janani - ju48@cornell.edu</div>
-                    <div class="4u"><span class="image fit"><img src="images/yumeng.png" alt="yu meng" /></span>Yu Meng - ykz2@cornell.edu</div>
+                    <div class="4u"><span class="image fit"><img src="images/yumeng.png" alt="yu meng" /></span>Kate - ykz2@cornell.edu</div>
                 </div>
             </div>
         </section>
