--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
 <footer id="footer">
         <ul class="icons">
-            <li><a href="https://github.com/alexsinfarosa/autobot5" class="icon fa-github"><span class="label">Github</span></a></li>
-            <li><a href="as898@cornell.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+            <li><a href="https://github.com/lucy-he/DesignProject4" class="icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="lh486@cornell.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
         </ul>
         <ul class="copyright">
             <li>Design: Alex and Lucy</li>
