--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
             <h2>Design Project II videos</h2>
             <!-- Alex -->
             <div class="row">
-                <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
+            <div class="col-xs-12 col-sm-4 panel">
+                    <iframe width="100%" height="200%" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
-                </article>
+                </div>
             </div>
             <!-- Lucy -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="200%" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
                     <h3>Lucy</h3>
                     <!-- <p>Your Spirit Robot.</p> -->
                 </article>
@@ -112,7 +112,7 @@
             <!-- Yu Meng -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="200%"src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
                     <h3>Yu Meng</h3>
                     <!-- <p>Tri-Arm Robot</p> -->
                 </article>
@@ -120,7 +120,7 @@
             <!-- Janani -->
             <div class="row">
                 <article class="12u 12u$(large) work-item">
-                    <iframe width="100%" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="200%" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
                     <h3>Janani</h3>
                     <!-- <p>Kirby Robot</p> -->
                 </article>
