--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h2>Design Project II videos</h2>
             <!-- Alex -->
             <div class="row">
-            <div class="col-xs-12 col-sm-4 panel">
+            <div class="col-xs-12">
                     <iframe width="100%" height="200%" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
