--- a/index.html
+++ b/index.html
@@ -95,26 +95,26 @@
             <h2>Design Project II videos</h2>
             <!-- Alex -->
 
-                    <iframe width="100%" height="100%" style="position: absolute; padding:0px" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500px" src="https://www.youtube.com/embed/pTeXi_QbZms" frameborder="0" allowfullscreen></iframe>
                     <h3>Alex</h3>
                     <!-- <p>Drawing tool with arduino.</p> -->
 
             <!-- Lucy -->
-                    <iframe width="100%" height="100%" style="position: absolute; padding:0px" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500px" src="https://www.youtube.com/embed/KqN0v2CgX_0" frameborder="0" allowfullscreen></iframe>
                     <h3>Lucy</h3>
 
             <!-- Yu Meng -->
-                    <iframe width="100%" height="100%" style="position: absolute; padding:0px" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500px" src="https://www.youtube.com/embed/KOrkc2wSehM" frameborder="0" allowfullscreen></iframe>
                     <h3>Yu Meng</h3>
                     <!-- <p>Tri-Arm Robot</p> -->
 
             <!-- Janani -->
-                    <iframe width="100%" height="100%" style="position: absolute; padding:0px" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500px" src="https://www.youtube.com/embed/nTtD-Y3l7hA" frameborder="0" allowfullscreen></iframe>
                     <h3>Janani</h3>
                     <!-- <p>Kirby Robot</p> -->
 
             <!-- Pehuen -->
-                    <iframe width="100%" height="100%" style="position: absolute; padding:0px" src="https://www.youtube.com/embed/cQjUlOIpXek" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="500px" src="https://www.youtube.com/embed/cQjUlOIpXek" frameborder="0" allowfullscreen></iframe>
                     <h3>Pehuen</h3>
                     <!-- <p>Wally Re-incarnated</p> -->
         </section>
