Changed Team Name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Interaction Dynamics</title>
+    <title>Dynamic Improvement</title>
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -34,7 +34,7 @@
     <!-- Header -->
     <header id="header">
         <a href="#" class="image avatar"><img src="images/school.svg" alt="" /></a>
-        <h1><strong>Team Interaction Dynamics</strong><br />
+        <h1><strong>Team Dynamic Improvement</strong><br />
 				
 				Disconnect between Professor and Students in a Lecture Hall</h1>
     </header>
