--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 <body id="top">
     <!-- Header -->
     <header id="header">
-        <a href="#" class="image avatar"><img src="images/school.svg" alt="" /></a>
-        <h1><strong>Team Dynamic Improvement</strong><br />
-				
-				Disconnect between Professor and Students in a Lecture Hall</h1>
+        <a href="#" class="image avatar"><img src="images/laptop.png" alt="" /></a>
+        <h1><strong>Team Dynamic Improvement</strong></h1>
+        <h1>Are Laptops a Physical Barrier Against Communication?</h1>
     </header>
     <!-- Main -->
     <div id="main">
@@ -44,7 +43,7 @@
         <!--One-->
         <section id="one">
             <h2>Our Focus<br /></h2>
-            <p>We want to explore how a robot can transmit emotions from professors to students and vice versa and establish a greater sense of understanding amongst participants in the lecture. Our robot will improve class discussion by  simply expressing the overall group emotion to the professor i.e. making loud noises to indicate frustration or tapping a soothing beat for contentedness. Students and professors will share a two-way stream of communication through expressive robots that connect their feelings together to improve attentiveness in a class setting.</p>
+            <p>Our objective was to understand and explore how a laptop could form a physical barrier to team discussion and distract team members from paying attention to each other. Specifically, we wanted to see whether team members felt less engaged in conversation if someone was multitasking with an electronic device like a laptop or smartphone to chat with others or to surf the Internet.  </p>
         </section>
 
         <!-- Two -->
@@ -53,7 +52,7 @@
         <p>On March 8, we observed students and professors at Duffield Hall and saw different communication patterns exchanged between them. </p>
         <ul>
             <li>Most students individually worked on their computers without looking at others. </li>
-            <li>Students that sat with professors paid closer attention to them and treated the authority figure with more respect compared to their friends. </li>
+            <li>Students multitasked between working with their team members on their laptops and typing out messages to their friends on their phones. 
             <img src="images/duffield.jpg" alt="Duffield Hall" width="100%" height="100%"/>
         </ul>
         </section>
@@ -73,21 +72,18 @@
 
         <!-- Four -->
         <section id="four">
-        <h2> Observations in a Lecture Hall</h2>
-        <p> We observed how students interacted with each other and with the professor in a lecture hall in Olin Hall. </p>
-        <p style="font-weight:bold">How does the team resolve conflicts, make decisions, balance contributions, or engage in creative activities? </p>
-        <ul>
-            <li>Professor and teaching assistants often walked up and down the aisles to answer individual student questions and clear up any confusion. </li>
-            <li>Every twenty minutes or so, the Professor asked a question to the class. </li>
-        </ul>
-        <img src="images/professorolin.JPG" alt="Professor in Olin" width="100%" height="100%"/>
-        <p style="font-weight:bold">What objects play a central role during teamwork? </p>
-        <ul>
-            <li>Good communication and focus is crucial for students to understand what the professor is doing on the screen and learn during the lecture. </li>
-            <li>Professor needs to understand the class atmosphere, but has difficulty reading facial expressions especially in a large lecture hall. He can not hold students accountable for not paying attention if he can not see what’s on their computers. </li>
-            <li>Often times, students felt distracted by their phones, computers, and friends. </li>
-        </ul>
-        <img src="images/studentolin.JPG" alt="Professor in Olin" width="100%" height="100%"/>
+        <h2> Teamwork Task to Measure Individual and Group Distractedness</h2>
+        <p> We created a task to focus on how individuals get distracted in a group. At the start, one of us sent all individuals a link to Flockdraw, an online drawing collaboration platform. We told three team members that they had 10-15 minutes to solve two visual brain puzzles together. They could use the online chat or talk to each other in person as well as draw out their ideas. When they finish one problem, they should all agree on the answer before typing it out in the chat box. </p>
+        <h4 style="font-weight:bold">Experimental Setup </h4>
+        <p>
+        At 6:00pm, we recruited three of our friends to participate in a social experiment at Duffield Hall. None of them had met each other before. One of our participants was a business student, while the others were engineers. At the start, we had each of them sit at an empty table, open up their laptops to an email with two questions and Flockdraw, and start discussing the problem. Two of our team members video-recorded their interactions from two different angles for ten minutes. 
+        </p>
+        <iframe width="100%" height="500px" src="https://www.youtube.com/embed/tf31iRq3UVc" frameborder="0" allowfullscreen></iframe>
+        
+        <h4 style="font-weight:bold">Analysis and Coding Scheme</h4>
+        <p>All of our participants engaged in channel blending where they alternated between different electronics like a calculator, smartphone, and the Flockdraw interface to solve the problems. They mainly used the calculator in their smartphone to calculate values for the first question and the Flockdraw interface to draw out their ideas. They rarely used the online chat interface, but preferred to speak their thoughts out loud. Interestingly, the two engineers talked the majority of the time. They seemed to understand how to solve the problem, but the business student felt left out and her opinion undervalued because she did not understand what was going on.</p>
+
+        <img src="images/codingscheme.png" alt="Professor in Olin" width="100%" height="100%"/>
         </section>
 
         <!-- Five -->
