Made laptop image visible

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h4 style="font-weight:bold">Analysis and Coding Scheme</h4>
         <p>All of our participants engaged in channel blending where they alternated between different electronics like a calculator, smartphone, and the Flockdraw interface to solve the problems. They mainly used the calculator in their smartphone to calculate values for the first question and the Flockdraw interface to draw out their ideas. They rarely used the online chat interface, but preferred to speak their thoughts out loud. Interestingly, the two engineers talked the majority of the time. They seemed to understand how to solve the problem, but the business student felt left out and her opinion undervalued because she did not understand what was going on.</p>
 
-        <img src="images/codingscheme.png" alt="Professor in Olin" width="100%" height="100%"/>
+        <img src="images/codingscheme.PNG" alt="Coding Scheme" width="100%" height="100%"/>
         </section>
 
         <!-- Five -->
