Changed PNG -> png and JPG -> jpg

--- a/index.html
+++ b/index.html
@@ -111,22 +111,22 @@
         <h2>Benchmarking Mind Map</h2>
         <p>A few days later, we skyped each other and discussed ideas for what we wanted our robot to look like and what materials we might need. Ultimately, we decided to focus on the tapping factor as a subtle way of catching people surfing social media instead of working productively on their team projects.
         </p>
-        <img src="images/mindmap.PNG" width="80%"/>
+        <img src="images/mindmap.png" width="80%"/>
         </section>
 
         <section id="seven">
         <h2>Initial Design Sketches</h2>
         <p>All team members sketched our some designs focusing on the tapping factor, reflecting mirror, and protrusion that could get team members to notice how distracted they are from work.</p>
         <h4>Lucy's Design Sketches</h4>
-        <img src="images/lucy_designs.JPG" width="100%" height="100%"/>
+        <img src="images/lucy_designs.jpg" width="100%" height="100%"/>
         <h4>Alex's Design Sketches</h4>
-        <img src="images/alex_designs.JPG" width="100%" height="100%"/>
+        <img src="images/alex_designs.jpg" width="100%" height="100%"/>
         <h4>Kate's Design Sketches</h4>
-        <img src="images/kate_designs.JPG" width="100%" height="100%"/>
+        <img src="images/kate_designs.jpg" width="100%" height="100%"/>
         <h4>Pehuen's Design Sketches</h4>
-        <img src="images/pehuen_designs.JPG" width="100%" height="100%"/>
+        <img src="images/pehuen_designs.jpg" width="100%" height="100%"/>
         <h4>Janani's Design Sketches</h4>
-        <img src="images/janani_designs.JPG" width="100%" height="100%"/>
+        <img src="images/janani_designs.jpg" width="100%" height="100%"/>
         </section>
 
         <section id="eight">
@@ -143,9 +143,9 @@
         <section id="nine">
         <h2>Reflector Cardboard Technical Implementation</h2>
         <p>We came back together and started working on creating a functional prototype with three Arudino motors, a cardboard body, two rulers, and a mirror. </p>
-        <img src="images/robot_build1.JPG" width="100%" height="100%"/>
-        <img src="images/robot_build2.JPG" width="100%" height="100%"/>
-        <img src="images/robot_build3.JPG" width="100%" height="100%"/>
+        <img src="images/robot_build1.jpg" width="100%" height="100%"/>
+        <img src="images/robot_build2.jpg" width="100%" height="100%"/>
+        <img src="images/robot_build3.jpg" width="100%" height="100%"/>
 
         </section>
 
@@ -153,7 +153,7 @@
         <h2>Interactive FlowChart and Three Expressive Motions</h2>
         <p>One of our team members created an interactive flowchart that depicts how the robot interacts. Originally, the robot simply rotates 360 degrees. When it notices a team members getting distracted online, it stops in front of that person's screen. If that team member stays distracted for more than five minutes, then the robot starts tapping on the screen. If ten minutes pass, then the robot leans over the laptop to show the person a mirror reflection. Once the team member stops getting distracted, the robot resumes rotating 360 degrees and surveilling the crowd. 
         </p>
-        <img src="images/flowchart.PNG" width="100%" height="100%"/>
+        <img src="images/flowchart.png" width="100%" height="100%"/>
         <p>Our three expressive behaviors are:</p>
         <ul>
         	<li>Rotate 360 degrees</li>
@@ -182,8 +182,8 @@
         	</li>
         </ul>
         <p>Moreover, we used one Arduino Uno board programmed to respond to command-line commands for wireless control with a phone.</p>
-        <img src="images/final_design1.JPG" width="100%" height="100%"/>
-        <img src="images/final_design2.PNG" width="100%" height="100%"/>
+        <img src="images/final_design1.jpg" width="100%" height="100%"/>
+        <img src="images/final_design2.png" width="100%" height="100%"/>
         </section>
 
         <section id="twelve">
@@ -218,17 +218,17 @@
         <h4>Demographic Online Survey Results</h4>
         <p>Out of 52 total responses, we rejected 6 responses based on fake information (i.e. k or Lorem Ipsum). Most responders were senior students (13) or graduate students (14). Ages ranged from 18-22 (17) to 36-64 (1). 24 participants identified themselves as Male, while 20 identified as Female. </p>
 		<p>29% of participants felt the statement that they met with others to perform collaborative work, described them very well, and 29% felt it described them moderately well. </p>
-		<img src="images/Q4_GroupFrequency.PNG" width="100%" height="100%"/>
+		<img src="images/Q4_GroupFrequency.png" width="100%" height="100%"/>
         <p>Interestingly, participants varied in how much work they did on laptops. </p>
-        <img src="images/Q5_CollaborationLaptops.PNG" width="100%" height="100%"/>
+        <img src="images/Q5_CollaborationLaptops.png" width="100%" height="100%"/>
         <h4>Rotating Motion</h4>
         <p>Our first video clip showed the robot alternating between fast and slow movement. Many participants (20) felt the robot was scanning and searching. 15 participants felt the robot was rotating around, while 4 participants had no idea. Interestingly, we received 5 lorem ipsum responses due to our acceptance of all workers including bots with 0% approval ratings.</p>
 		<p>One participant mentioned, “I wouldn't be able to tell you anything but spin without the title. With the word "Reflector" title, I think it is intended to distract members by catching their attention, similarly to how reflective vests work for construction workers and biker/runners at night.”</p>
 		<p>Another participant mentioned, “It seemed like the robot was making rounds to point at some group members? The first section of the clip did not seem like it had a target. In the second cut, the robot was moving to point at the other person (orange shirt)/his laptop”</p>
-        <img src="images/RotateRobot_Ratings.PNG" width="100%" height="100%"/>
+        <img src="images/RotateRobot_Ratings.png" width="100%" height="100%"/>
 
-        <img src="images/RotateRobot_Feelings.PNG" width="100%" height="100%"/>
-        <img src="images/Rotate_robot_InterpretationFeeling.PNG" width="100%" height="100%"/>
+        <img src="images/RotateRobot_Feelings.png" width="100%" height="100%"/>
+        <img src="images/Rotate_robot_InterpretationFeeling.png" width="100%" height="100%"/>
          <p>12 participants did not notice the robot changed speeds, while 22 participants did notice the robot changed speeds from fast to slow. Out of those 22 participants, 2 participants wanted a medium speed, 10 participants liked the slower speed, and the rest of the 10 preferred the fast speed. </p>
 		<p>One participant mentioned, “Yes, but I would have preferred a speed in between. The fast speed was too noisy and distracting, and the slow speed seems like it will take the robot too long to get somewhere. But if forced to choose, slow is better, as it's less distracting.”</p>
 		<p>Another participant said, “As long as the speed is uniform and it doesn't accelerate so I get used to it and don't get distracted”</p>
@@ -237,9 +237,9 @@
 		<p>One participant mentioned that the robot was trying to, “Get the attention of the distracted student, re-focus the student on the task at hand.”</p>
 		<p>23 participants felt that one of the team members was distracted and the robot was trying to wave to get his attention. People thought the robot “tapped” or “pointed in the direction” or “showed its arm” at the distracted team member. </p>
 		<p>Interestingly, one participant noted that “I don't think the members reacted much but I think it would be distracting. It may be better if the robot communicated attention back to the task in a more discrete method such as a vibrating bluetooth watch strap or light indicator on the object of interest. The sound of the robot moving along with visual view for me would be distracting.”</p>
-		<img src="images/RobotFlickarm_ratings.PNG" width="100%" height="100%"/>
-		<img src="images/robotflickarm_expressedfeeling.PNG" width="100%" height="100%"/>
-		<img src="images/flickarm_interpret.PNG" width="100%" height="100%"/>
+		<img src="images/RobotFlickarm_ratings.png" width="100%" height="100%"/>
+		<img src="images/robotflickarm_expressedfeeling.png" width="100%" height="100%"/>
+		<img src="images/flickarm_interpret.png" width="100%" height="100%"/>
 		<h4>Overview of Field Study Process</h4>
 		<p>We did two comparative field studies. </p>
 		<p>Study 1 - We bought in random participants and asked them to work on a specified task we gave them. Our motivation was to observe how people who have not worked together before performed a task and to which extent robotic intervention would be required. One team member participated in the field study to purposely be distracted during activity and observe others’ response to the robot movement</p>
@@ -274,7 +274,7 @@
 			<li>Smoother movements of the arm</li>
 			<li>Mobile robot with a moving base</li>
 		</ul>
-		<img src="images/poster.PNG" width="100%" height="100%"/>
+		<img src="images/poster.png" width="100%" height="100%"/>
         </section>
         <!-- Five -->
         <section id="Twenty">
@@ -308,7 +308,7 @@
         <!-- Team Member Images -->
         <section id="three">
             <h2>Team members</h2>
-            <img src="images/team.JPG" width="100%" height="100%"/>
+            <img src="images/team.jpg" width="100%" height="100%"/>
             <div class="box alt">
                 <div class="row 50% uniform">
                     <div class="4u"><span class="image fit"><img src="images/alex.png" alt="alex" /></span>Alex - as898@cornell.edu</div>
