Fixed img endings

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h4 style="font-weight:bold">Analysis and Coding Scheme</h4>
         <p>All of our participants engaged in channel blending where they alternated between different electronics like a calculator, smartphone, and the Flockdraw interface to solve the problems. They mainly used the calculator in their smartphone to calculate values for the first question and the Flockdraw interface to draw out their ideas. They rarely used the online chat interface, but preferred to speak their thoughts out loud. Interestingly, the two engineers talked the majority of the time. They seemed to understand how to solve the problem, but the business student felt left out and her opinion undervalued because she did not understand what was going on.</p>
 
-        <img src="images/coding_scheme.jpg" alt="Coding Scheme" width="100%" height="100%"/>
+        <img src="images/coding_scheme.JPG" alt="Coding Scheme" width="100%" height="100%"/>
         </section>
 
         <section id="Five">
@@ -120,13 +120,13 @@
         <h4>Lucy's Design Sketches</h4>
         <img src="images/lucy_designs.jpg" width="100%" height="100%"/>
         <h4>Alex's Design Sketches</h4>
-        <img src="images/alex_designs.jpg" width="100%" height="100%"/>
+        <img src="images/alex_designs.JPG" width="100%" height="100%"/>
         <h4>Kate's Design Sketches</h4>
-        <img src="images/kate_designs.jpg" width="100%" height="100%"/>
+        <img src="images/kate_designs.JPG" width="100%" height="100%"/>
         <h4>Pehuen's Design Sketches</h4>
-        <img src="images/pehuen_designs.jpg" width="100%" height="100%"/>
+        <img src="images/pehuen_designs.JPG" width="100%" height="100%"/>
         <h4>Janani's Design Sketches</h4>
-        <img src="images/janani_designs.jpg" width="100%" height="100%"/>
+        <img src="images/janani_designs.JPG" width="100%" height="100%"/>
         </section>
 
         <section id="eight">
@@ -143,9 +143,9 @@
         <section id="nine">
         <h2>Reflector Cardboard Technical Implementation</h2>
         <p>We came back together and started working on creating a functional prototype with three Arudino motors, a cardboard body, two rulers, and a mirror. </p>
-        <img src="images/robot_build1.jpg" width="100%" height="100%"/>
-        <img src="images/robot_build2.jpg" width="100%" height="100%"/>
-        <img src="images/robot_build3.jpg" width="100%" height="100%"/>
+        <img src="images/robot_build1.JPG" width="100%" height="100%"/>
+        <img src="images/robot_build2.JPG" width="100%" height="100%"/>
+        <img src="images/robot_build3.JPG" width="100%" height="100%"/>
 
         </section>
 
