Removed bolding on headings

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         	<li>Rearrange three golf balls so that the triangular pattern points down instead of up.</li>
         	<img src="images/flockdraw_2.png"/>
         </ul>
-        <h2 style="font-weight:bold">Experimental Setup </h2>
+        <h2>Experimental Setup </h2>
         <p>
         At 6:00pm, we recruited three of our friends to participate in a social experiment at Duffield Hall. None of them had met each other before. One of our participants was a business student, while the others were engineers. At the start, we had each of them sit at an empty table, open up their laptops to an email with two questions and Flockdraw, and start discussing the problem. Two of our team members video-recorded their interactions from two different angles for ten minutes. 
         </p>
         <iframe width="100%" height="500px" src="https://www.youtube.com/embed/tf31iRq3UVc" frameborder="0" allowfullscreen></iframe>
         
-        <h2 style="font-weight:bold">Analysis and Coding Scheme</h2>
+        <h2>Analysis and Coding Scheme</h2>
         <p>All of our participants engaged in channel blending where they alternated between different electronics like a calculator, smartphone, and the Flockdraw interface to solve the problems. They mainly used the calculator in their smartphone to calculate values for the first question and the Flockdraw interface to draw out their ideas. They rarely used the online chat interface, but preferred to speak their thoughts out loud. Interestingly, the two engineers talked the majority of the time. They seemed to understand how to solve the problem, but the business student felt left out and her opinion undervalued because she did not understand what was going on.</p>
 
         <img src="images/coding_scheme.JPG" alt="Coding Scheme" width="100%" height="100%"/>
