Made comments more consistent

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <div id="main">
 
         <!--One-->
-        <section id="one">
+        <section id="One">
             <h2>Our Focus<br /></h2>
             <p>Our objective is to understand and explore how a laptop could form a physical barrier to team discussion and distract team members from paying attention to each other. Specifically, we wanted to see whether team members felt less engaged in conversation if someone was multitasking with an electronic device like a laptop or smartphone to chat with others or to surf the Internet. </p>
         </section>
 
         <!-- Two -->
-        <section id="two">
+        <section id="Two">
             <h2>Preliminary Observations</h2>
             <p>On March 8, we observed students and professors at Duffield Hall and saw different communication patterns exchanged between them. </p>
             <ul>
@@ -59,7 +59,7 @@
         </section>
 
         <!-- Three -->
-        <section id="three">
+        <section id="Three">
             <h2>Brainstorming Session</h2>
             <p>Each of us met up the next day to discuss how we could create an expressive robot to solve this disconnect between students and authority figures. </p>
             <ul>
@@ -72,7 +72,7 @@
         </section>
 
         <!-- Four -->
-        <section id="four">
+        <section id="Four">
             <h2> Teamwork Task to Measure Individual and Group Distractedness</h2>
             <p> We created a task to focus on how individuals get distracted in a group. At the start, one of us sent all individuals a link to Flockdraw, an online drawing collaboration platform. We told three team members that they had 10-15 minutes to solve two visual brain puzzles together. They could use the online chat or talk to each other in person as well as draw out their ideas. When they finish one problem, they should all agree on the answer before typing it out in the chat box. </p>
             <h2>Instructions for Team Members</h2>
