--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         .image.avatar img {
             border-radius: 0% !important;
         }
+        @media (max-width: 600px) and (min-width:400px){
+        	iframe{
+        		height:300px;
+        	}
+        }
+         @media (max-width: 399px) and (min-width:0px){
+        	iframe{
+        		height:auto;
+        	}
+        }
     </style>
 </head>
 
@@ -323,13 +333,13 @@
             <img src="images/team.jpg" width="100%" height="100%" />
             <div class="box alt">
                 <div class="row 50% uniform">
-                    <div class="4u"><span class="image fit"><img src="images/alex.png" alt="alex" /></span>Alex - as898@cornell.edu</div>
-                    <div class="4u"><span class="image fit"><img src="images/lucy.png" alt="lucy" /></span>Lucy - lh286@cornell.edu</div>
-                    <div class="4u"><span class="image fit"><img src="images/janani.png" alt="janani" /></span>Janani - ju48@cornell.edu</div>
+                    <div class="4u"><span class="image fit"><img src="images/alex.png" alt="alex" /></span>Alex - as898</div>
+                    <div class="4u"><span class="image fit"><img src="images/lucy.png" alt="lucy" /></span>Lucy - lh486</div>
+                    <div class="4u"><span class="image fit"><img src="images/janani.png" alt="janani" /></span>Janani - ju48</div>
                 </div>
                 <div class="row 50% uniform">
-                    <div class="4u"><span class="image fit"><img src="images/yumeng.png" alt="yu meng" /></span>Kate - ykz2@cornell.edu</div>
-                    <div class="4u"><span class="image fit"><img src="images/pehuen.png" alt="pehuen" /></span>Pehuen - ppm44@cornell.edu</div>
+                    <div class="4u"><span class="image fit"><img src="images/yumeng.png" alt="yu meng" /></span>Kate - ykz2</div>
+                    <div class="4u"><span class="image fit"><img src="images/pehuen.png" alt="pehuen" /></span>Pehuen - ppm44</div>
                 </div>
             </div>
         </section>
