--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         <ul class="copyright">
             <li>Design: Alex and Lucy</li>
         </ul>
-    </footer> -->
+    </footer>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.poptrox.min.js"></script>
