Made some img endings capitalized

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p>
                 How can a robot intervene and help individual team members communicate better by minimizing use of their laptops, and also valuing and holding each team member accountable to group discussion by not being a source of distraction?
             </p>
-            <ul>Requirements
+            <ul>
                 <li>Robot should intervene when two team members are leaning over to look at the same screen and excluding the third person from discussion. </li>
                 <li>Robot should rotate around to see which team members are talking and tap once on a laptop screen to encourage a confused team member to talk and tap furiously on a talkative team member’s laptop screen to stop them from talking so much. </li>
                 <li>Robot should be small enough to fit between two laptops, but tall enough to see over individual laptop screens and ensure team members are not distracting themselves. </li>
@@ -183,7 +183,7 @@
         <section id="Twelve">
         	<h2>Third CAD 3D Printed Prototype</h2>
         	<p>Two weeks later, we came back together and brainstormed ideas for a more aesthetically appealing, 3D printed model (Fig 10). We decided to go with a unique pear shape and conceal one continuous 360 degrees motor and wires inside. Then, we planned on sticking two other motors, one of which moves the arm up and down and another that pulls the string on the second arm and flicks the mirror up and down. Unfortunately, we could not get our parts 3D printed in time because we sent them to Rhodes Hall too late. But, we did end up using many of our ideas from our 3D printed model in our final prototype like concealing wires inside a wooden base and a flicking motion on the arm with the mirror attached. </p>
-  			<img src="images/CAD.jpg" height="100%" width="100%"/>
+  			<img src="images/CAD.JPG" height="100%" width="100%"/>
         </section>
 
         <!--Thirteen-->
@@ -206,7 +206,7 @@
                 </li>
             </ul>
             <p>Moreover, we used a Bluetooth Mate Gold with a BLE app connected to an Arduino 101 board to wirelessly connect and remove extraneous wires.  The BLE application reads from the serial port and writes to the Bluetooth port on the Arduino 101 board (Fig 10). We typed in letters which triggered commands on the robot: o for open, c for close, r for right, l for left, d for decrease, i for increase, w for wiggle (Fig 11). </p>
-            <img src="images/finalrobot_parts.jpg" width="100%" height="100%" />
+            <img src="images/finalrobot_parts.JPG" width="100%" height="100%" />
             <img src="images/final_design1.jpg" width="100%" height="100%" />
             <img src="images/final_design2.png" width="100%" height="100%" />
         </section>
