Removed word first

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <!--Eight-->
         <section id="Eight">
-        <h2>First Paper Robot Prototypes</h2>
+        <h2>Paper Robot Prototypes</h2>
         <p>A few days later, we created two paper prototype robots to explore the physical action and interaction participants might experience with the tapping motion and peering motion. The Pointer lightly taps against the computer screen when people are not paying attention, increasing in intensity depending on how distracted participants are and how long they wait before they focus</p>
         <img src="images/paper1.jpg" width="100%" height="100%"/>
 
