Removed word third

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         <!--Twelve-->
         <section id="Twelve">
-        	<h2>Third CAD 3D Printed Prototype</h2>
+        	<h2>CAD 3D Printed Prototype</h2>
         	<p>Two weeks later, we came back together and brainstormed ideas for a more aesthetically appealing, 3D printed model (Fig 10). We decided to go with a unique pear shape and conceal one continuous 360 degrees motor and wires inside. Then, we planned on sticking two other motors, one of which moves the arm up and down and another that pulls the string on the second arm and flicks the mirror up and down. Unfortunately, we could not get our parts 3D printed in time because we sent them to Rhodes Hall too late. But, we did end up using many of our ideas from our 3D printed model in our final prototype like concealing wires inside a wooden base and a flicking motion on the arm with the mirror attached. </p>
   			<img src="images/CAD.JPG" height="100%" width="100%"/>
         </section>
